--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -42,7 +42,7 @@ Author=jekovcar
 6=&Списък дискове в менюто на системната област
 7=&Автоматична проверка за актуализации
 8=<a>Провери сега</a>
-9=Automatically &report open failures to improve product
+9=Automatically &report open failures to improve Xreveal
 
 [DIALOG_9]
 0=CD
