--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -42,7 +42,7 @@ Author=
 6=托盘菜单中列出光驱列表(&L)
 7=自动检查更新(&C)
 8=<a>现在检查</a>
-9=Automatically &report open failures to improve product
+9=Automatically &report open failures to improve Xreveal
 
 [DIALOG_9]
 0=音乐 CD
