--- a/Xreveal_CHT.ini
+++ b/Xreveal_CHT.ini
@@ -42,7 +42,7 @@ Author=
 6=在系統托盤選單中列出驅動器(&L)
 7=自動檢查更新(&S)
 8=<a>Check now</a>
-9=Automatically &report open failures to improve product
+9=Automatically &report open failures to improve Xreveal
 
 [DIALOG_9]
 0=CD
