--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -42,7 +42,7 @@ Author=The Punisher
 6=&Laufwerke im Xreveal-Taskleistensymbol anzeigen
 7=Automatisch Online auf Updates überprüfen
 8=<a>Jetzt prüfen</a>
-9=Automatically &report open failures to improve product
+9=Automatically &report open failures to improve Xreveal
 
 [DIALOG_9]
 0=CD
