--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -42,7 +42,7 @@ Author=
 6=&List drives in the system tray menu
 7=&Check for updates automatically
 8=<a>Check now</a>
-9=Automatically &report open failures to improve product
+9=Automatically &report open failures to improve Xreveal
 
 [DIALOG_9]
 0=CD
