--- a/Xreveal_FIN.ini
+++ b/Xreveal_FIN.ini
@@ -42,7 +42,7 @@ Author=TJL
 6=&Näytä asemat ilmaisinalueen valikossa
 7=&Tarkista päivitykset automaattisesti
 8=<a>Check now</a>
-9=Automatically &report open failures to improve product
+9=Automatically &report open failures to improve Xreveal
 
 [DIALOG_9]
 0=CD
