--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -42,7 +42,7 @@ Author= Lieba Natur Brilian (naturbrilian)
 6=&Daftar drive di sistem menu baki
 7=&Periksa untuk pembaruan otomatis
 8=<a>Periksa sekarang</a>
-9=Automatically &report open failures to improve product
+9=Automatically &report open failures to improve Xreveal
 
 [DIALOG_9]
 0=CD
