--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -42,7 +42,7 @@ Author=bovirus (bovirus@gmail.com)
 6=&Elenca unità nel menu barra di sistema
 7=&Controlla automaticamente aggiornamenti
 8=<a>Controlla ora</a>
-9=Automatically &report open failures to improve product
+9=Automatically &report open failures to improve Xreveal
 
 [DIALOG_9]
 0=CD
