--- a/Xreveal_JPN.ini
+++ b/Xreveal_JPN.ini
@@ -42,7 +42,7 @@ Author=Re*Index.(ot_inc)
 6=システムトレイメニューにドライブを一覧表示(&L)
 7=自動的にアップデートを確認(&C)
 8=<a>Check now</a>
-9=Automatically &report open failures to improve product
+9=Automatically &report open failures to improve Xreveal
 
 [DIALOG_9]
 0=CD
