--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -42,7 +42,7 @@ Author=VenusGirl (비너스걸)
 6=시스템 트레이 메뉴에 드라이브 나열(&L)
 7=자동으로 업데이트 확인(&C)
 8=<a>지금 확인</a>
-9=Automatically &report open failures to improve product
+9=Automatically &report open failures to improve Xreveal
 
 [DIALOG_9]
 0=CD
