--- a/Xreveal_PLK.ini
+++ b/Xreveal_PLK.ini
@@ -42,7 +42,7 @@ Author=Fresta
 6=&Lista dysków w menu zasobnika systemowego
 7=&Sprawdzaj aktualizacje automatycznie
 8=<a>Check now</a>
-9=Automatically &report open failures to improve product
+9=Automatically &report open failures to improve Xreveal
 
 [DIALOG_9]
 0=CD
