--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -42,7 +42,7 @@ Author=jekovcar
 6=&Показать диски в меню на панели задач
 7=&Автоматически проверять наличие обновлений
 8=<a>Проверить сейчас</a>
-9=Automatically &report open failures to improve product
+9=Automatically &report open failures to improve Xreveal
 
 [DIALOG_9]
 0=CD
