--- a/Xreveal_SLV.ini
+++ b/Xreveal_SLV.ini
@@ -42,7 +42,7 @@ Author=Jadran Rudec, E-pošta: jrudec@gmail.com
 6=&Seznam pogonov v meniju programske vrstice
 7=Samodejno preveri obstoj posodobitev
 8=<a>Check now</a>
-9=Automatically &report open failures to improve product
+9=Automatically &report open failures to improve Xreveal
 
 [DIALOG_9]
 0=Pogon CD
