--- a/Xreveal_SPA.ini
+++ b/Xreveal_SPA.ini
@@ -42,7 +42,7 @@ Author=Steven Rogers
 6=&Listar unidades en el menú de la bandeja del sistema
 7=&Comprobar actualizaciones automaticamente
 8=<a>Check now</a>
-9=Automatically &report open failures to improve product
+9=Automatically &report open failures to improve Xreveal
 
 [DIALOG_9]
 0=CD
