--- a/Xreveal_SVE.ini
+++ b/Xreveal_SVE.ini
@@ -42,7 +42,7 @@ Author=Sopor
 6=&Lista enheter i systemfältsmenyn
 7=Sök efter uppdateringar &automatiskt
 8=<a>Check now</a>
-9=Automatically &report open failures to improve product
+9=Automatically &report open failures to improve Xreveal
 
 [DIALOG_9]
 0=CD
