--- a/Xreveal_ARA.ini
+++ b/Xreveal_ARA.ini
@@ -42,7 +42,7 @@ Author=فتحي الداودية
 6=&List drives in the system tray menu
 7=&التحقق من وجود تحديثات تلقائيا
 8=<a>Check now</a>
-9=Automatically &report open failures to improve product
+9=Automatically &report open failures to improve Xreveal
 
 [DIALOG_9]
 0=قرص
