--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0402
 Name=Bulgarian(Български)
-Version=2.6.5
+Version=2.6.6
 Author=jekovcar
 1=ОК
 2=Отказ
@@ -42,7 +42,7 @@ Author=jekovcar
 6=&Списък дискове в менюто на системната област
 7=&Автоматична проверка за актуализации
 8=<a>Провери сега</a>
-9=Automatically &report open failures to improve Xreveal
+9=Автоматично & съобщавай за отворени сривове, за подобряване на Xreveal
 
 [DIALOG_9]
 0=CD
@@ -78,11 +78,11 @@ Author=jekovcar
 3=Xreveal не съдържа ключове за декриптиране, ще ви трябва база данни с ключове, за да работи. <a>За повече подробности</a>.
 4=KeyDB.cfg местоположение
 5=FUT местоположение
-6=&Find key online
+6=&Търси ключ онлайн
 
 [DIALOG_13]
-0=My Drives
-3=&Select drives that you want to scan by Xreveal.
+0=Моите Приводи
+3=&Изберете устройства, за сканиране от Xreveal.
 5=&Деактивирай AutoRun и AutoPlay
 8=Активирай &LibreDrive за UHD
 
@@ -266,6 +266,6 @@ Author=jekovcar
 95=Тази функция е налична само в <a>Pro версия</a>.
 96=&Опресни
 97=&Редактиране
-98=&Import...
-99=&Reveal keydb.db in Explorer
-100=Comment
+98=&Импорт...
+99=&Разкрий keydb.db в Explorer
+100=Коментар:
