--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0419
 Name=Russian (Русский)
-Version=2.6.5
+Version=2.6.6
 Author=jekovcar
 1=ОК
 2=Отмена
@@ -42,7 +42,7 @@ Author=jekovcar
 6=&Показать диски в меню на панели задач
 7=&Автоматически проверять наличие обновлений
 8=<a>Проверить сейчас</a>
-9=Automatically &report open failures to improve Xreveal
+9=Автоматически &сообщать об открытых сбоях для улучшения Xreveal
 
 [DIALOG_9]
 0=CD
@@ -78,11 +78,11 @@ Author=jekovcar
 3=Xreveal не содержит ключей дешифрования, для работы вам понадобится база данных ключей. <a>Больше подробностей</a>.
 4=Местоположение KeyDB.cfg
 5=Локация FUT
-6=&Find key online
+6=&Найти ключ онлайн
 
 [DIALOG_13]
-0=My Drives
-3=&Select drives that you want to scan by Xreveal.
+0=Мои диски
+3=&Выберите диски, для Xreveal сканирования.
 5=&Отключить AutoRun и AutoPlay
 8=Включить &LibreDrive для UHD
 
@@ -159,7 +159,7 @@ Author=jekovcar
 [DIALOG_B]
 1=Отправить
 3=%s столкнулся с проблемой и должен закрыться. Приносим извинения за неудобства.
-4=Отправьте нам этот отчет об ошибке, чтобы помочь решить проблему и улучшить это программное обеспечение.
+4=Отправить этот отчет об ошибке, для решения проблемы и улучшения программы.
 
 [DIALOG_C]
 0=Обратная связь
@@ -266,6 +266,6 @@ Author=jekovcar
 95=Эта функция доступна только в <a>версии Pro.</a>.
 96=Обновить
 97=&Редактировать
-98=&Import...
-99=&Reveal keydb.db in Explorer
-100=Comment
+98=&Импорт...
+99=&Показать keydb.db в Проводнике
+100=Комментарий
