--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0412
 Name=Korean (한국어)
-Version=2.6.1
+Version=2.6.6
 Author=VenusGirl (비너스걸)
 1=확인
 2=취소
@@ -42,7 +42,7 @@ Author=VenusGirl (비너스걸)
 6=시스템 트레이 메뉴에 드라이브 나열(&L)
 7=자동으로 업데이트 확인(&C)
 8=<a>지금 확인</a>
-9=Automatically &report open failures to improve Xreveal
+9=열기 실패를 자동으로 보고하여 Xreveal 개선
 
 [DIALOG_9]
 0=CD
@@ -81,8 +81,8 @@ Author=VenusGirl (비너스걸)
 6=&Find key online
 
 [DIALOG_13]
-0=My Drives
-3=&Select drives that you want to scan by Xreveal.
+0=내 드라이버
+3=Xreveal에서 검색할 드라이브를 선택합니다(&S).
 5=자동 실행 및 자동 재생 사용 안 함(&D)
 8=UHD용 LibreDrive 사용(&L)
 
@@ -242,7 +242,7 @@ Author=VenusGirl (비너스걸)
 71=입력한 등록 키가 잘못되었습니다.
 72=디스크 없음
 73=모든 옵션을 기본값으로 재설정하시겠습니까?\n\n아니오'를 클릭하면 현재 페이지 옵션만 재설정됩니다.
-74=RowId
+74=행 Id
 75=상태
 76=레이블
 77=유형
@@ -265,7 +265,7 @@ Author=VenusGirl (비너스걸)
 94=모든 레코드를 삭제하시겠습니까?
 95=이 기능은 <a>Pro 버전</a>에서만 사용할 수 있습니다.
 96=새로 고침(&R)
-97=&Edit
-98=&Import...
-99=&Reveal keydb.db in Explorer
-100=Comment
+97=편집(&E)
+98=가져오기(&I)...
+99=탐색기에서 keydb.db 표시(&R)
+100=주석
