--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -78,7 +78,7 @@ Author=VenusGirl (비너스걸)
 3=Xreveal에는 암호 해독 키가 없습니다. 작동하려면 키 데이터베이스가 필요합니다. <a>더 읽어 보세요</a>.
 4=KeyDB.cfg 위치
 5=BD+ 테이블 고정 (FUT) 위치
-6=&Find key online
+6=온라인에서 키 찾기(&F)
 
 [DIALOG_13]
 0=내 드라이버
