--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0410
 Name=Italian (Italiano)
-Version=2.6.5
+Version=2.6.6
 Author=bovirus (bovirus@gmail.com)
 1=OK
 2=Annulla
@@ -42,7 +42,7 @@ Author=bovirus (bovirus@gmail.com)
 6=&Elenca unità nel menu barra di sistema
 7=&Controlla automaticamente aggiornamenti
 8=<a>Controlla ora</a>
-9=Automatically &report open failures to improve Xreveal
+9=Segnala automaticamente e&rrori per migliorare Xreveal
 
 [DIALOG_9]
 0=CD
@@ -81,10 +81,10 @@ Author=bovirus (bovirus@gmail.com)
 6=&Find key online
 
 [DIALOG_13]
-0=My Drives
-3=&Select drives that you want to scan by Xreveal.
+0=Mie unità
+3=&Seleziona le unità che vuoi scansionare con Xreveal.
 5=&Disabilita esecuzione/riproduzione automatica
-8=Abilita &LibreDrive for UHD
+8=Abilita &LibreDrive per UHD
 
 [DIALOG_14]
 0=Crea un file immagine ISO...
@@ -266,6 +266,6 @@ Author=bovirus (bovirus@gmail.com)
 95=Questa funzione è disponibile solo nella <a>versione Pro</a>.
 96=Aggio&rna
 97=&Modifica
-98=&Import...
-99=&Reveal keydb.db in Explorer
-100=Comment
+98=&Importa...
+99=&Visualizza keydb.db in Explorer
+100=Commento
