--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -42,7 +42,7 @@ Author=The Punisher
 6=&Laufwerke im Xreveal-Taskleistensymbol anzeigen
 7=Automatisch Online auf Updates überprüfen
 8=<a>Jetzt prüfen</a>
-9=Automatically &report open failures to improve Xreveal
+9=Automatisch fehlgeschlagenes Öffnen einer Disc &melden um Xreveal zu verbessern.
 
 [DIALOG_9]
 0=CD
@@ -78,11 +78,11 @@ Author=The Punisher
 3=Xreveal beinhaltet keine Entschlüsselungsdateien. Bitte tragen sie hier die entsprechenden Pfade ein. <a>Weitere Details</a>.
 4=KeyDB.cfg Speicherort
 5=BD+ Fixup Tables (FUT) Speicherort
-6=&Find key online
+6=Online nach einem Schlüssel &suchen
 
 [DIALOG_13]
-0=My Drives
-3=&Select drives that you want to scan by Xreveal.
+0=Laufwerke
+3=&Wählen Sie die Laufwerke die Xreveal scannen soll.
 5=&AutoRun (inf-Datei) und AutoPlay (Windows) deaktivieren
 8=UHD-&LibreDrive aktivieren
 
@@ -141,7 +141,7 @@ Author=The Punisher
 4=Es wurde keine passende Entschlüsselungsdatei in der KeyDB.cfg gefunden. Möchten Sie die Entschlüsselung in unserer Cloud ausprobieren ?
 
 [DIALOG_23]
-0=Edit Disc Information
+0=Disc Informationen bearbeiten.
 
 [DIALOG_A]
 0=Software-Update
@@ -266,6 +266,6 @@ Author=The Punisher
 95=Diese Funktion ist nur in der <a>Pro-Version</a> verfügbar.
 96=&Aktualisieren
 97=&Bearbeiten
-98=&Import...
-99=&Reveal keydb.db in Explorer
-100=Comment
+98=&Importieren...
+99=Keydb.db im Explorer &anzeigen 
+100=Kommentar
