--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -1,4 +1,4 @@
-﻿[INFO]
+[INFO]
 ID=0x040C
 Name=French (Français)
 Version=2.6.6
@@ -42,7 +42,7 @@ Author=Andex
 6=&Afficher les lecteurs dans le menu de Xreveal
 7=&Rechercher les mises à jour automatiquement
 8= <a>Rechercher maintenant!</a>
-9=&Signaler automatiquement les codes d'erreur d'échec de lecture pour améliorer Xreveal
+9=&Signaler automatiquement les codes d'erreur de lecture pour améliorer Xreveal
 
 [DIALOG_9]
 0=CD
@@ -75,7 +75,7 @@ Author=Andex
 
 [DIALOG_12]
 0=KeyDB
-3=Xreveal ne contient aucune clé de déchiffrement! Vous devez utiliser <a>un fichier contenant les clés de déchiffrement</a> pour que Xreveal puisse fonctionner.
+3=Note: Xreveal ne contient aucune clé de déchiffrement!\nVous devez utiliser un <a>fichier</a> pour que Xreveal puisse fonctionner.
 4=Emplacement du fichier 'KeyDB.cfg'
 5=Emplacement des correctifs BD+/FUT (Fix Up Table)
 6=&Rechercher la clé en ligne
@@ -141,7 +141,7 @@ Author=Andex
 4=Pas de clé de déchiffrement trouvée dans 'KeyDB.cfg'!\nVoulez-vous évaluer la fonctionnalité de recherche de clé en ligne?
 
 [DIALOG_23]
-0=Editer les informations de disque
+0=Modifier certaines informations
 
 [DIALOG_A]
 0=Mise à jour
@@ -246,7 +246,7 @@ Author=Andex
 75=Etat
 76=Etiquette
 77=Type
-78=Capacité
+78=Taille
 79=Date
 80=Id. disque
 81=Ajouté le
@@ -265,7 +265,7 @@ Author=Andex
 94=Etes-vous sûr de vouloir supprimer tout le catalogue?
 95=Cette fonctionnalité n'est disponible qu'en <a>version Pro</a>
 96=&Actualiser
-97=&Editer
+97=&Editer...
 98=&Importer...
 99=&Ouvrir l'emplacement du fichier
 100=Commentaire
