--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -141,7 +141,19 @@ Author=jekovcar
 4=Няма ключове за декриптиране в KeyDB.cfg. Ще пробвате ли облачната функцията за декриптиране?
 
 [DIALOG_23]
-0=Редактиране инфо диск
+0=Disc Information
+
+[DIALOG_24]
+0=Drive Information
+
+[DIALOG_25]
+0=Import...
+3=Source keydb.db:
+4=Select or drop source keydb.db here
+5=Destination keydb.db：
+
+[DIALOG_26]
+0=Content Hash Verifier
 
 [DIALOG_A]
 0=Актуализация софтуер
@@ -269,3 +281,14 @@ Author=jekovcar
 98=&Импорт...
 99=&Разкрий keydb.db в Explorer
 100=Коментар:
+101=Verify ISO
+102=Verify Folder
+103=Verify Drive
+104=Bus Encryption Capable
+105=%s (Drive: %s)
+106=Open Log Folder
+107=Options
+108=Verbose output
+109=Command line version (Windows/macOS/Linux)
+110=Abort
+111=Vendor specific
