--- a/Xreveal_CHS.ini
+++ b/Xreveal_CHS.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0804
 Name=Chinese (简体中文)
-Version=2.6.1
+Version=2.6.6
 Author=
 1=确定
 2=取消
@@ -42,7 +42,7 @@ Author=
 6=托盘菜单中列出光驱列表(&L)
 7=自动检查更新(&C)
 8=<a>现在检查</a>
-9=Automatically &report open failures to improve Xreveal
+9=自动上报打开失败信息以改进 Xreveal (&R)
 
 [DIALOG_9]
 0=音乐 CD
@@ -70,8 +70,8 @@ Author=
 10=禁止 BD-Live
 11=模拟已连接 3D 显示器
 12=重命名文件夹
-13=Using &AES hardware acceleration
-14=<a>Benchmark</a>
+13=启用 &AES 硬件加速
+14=<a>测速</a>
 
 [DIALOG_12]
 0=KeyDB
@@ -82,9 +82,9 @@ Author=
 
 [DIALOG_13]
 0=我的驱动器
-3=&Select drives that you want to scan by Xreveal.
+3=选择你想被 Xreveal 扫描的光驱(&S):
 5=禁用自动播放(&D)
-8=UHD 启用 &LibreDrive
+8=对于 UHD 启用 &LibreDrive
 
 [DIALOG_14]
 0=复制光盘镜像...
@@ -138,10 +138,22 @@ Author=
 1=是
 2=否
 3=注册
-4=在 KeyDB.cfg 中未找到可用的解密密钥。你是否想试用云解密功能？
+4=在 KeyDB.cfg 中未找到可用的解密密钥。是否试用在线查找密钥功能？
 
 [DIALOG_23]
-0=编辑碟片信息
+0=Disc Information
+
+[DIALOG_24]
+0=Drive Information
+
+[DIALOG_25]
+0=Import...
+3=Source keydb.db:
+4=Select or drop source keydb.db here
+5=Destination keydb.db：
+
+[DIALOG_26]
+0=Content Hash Verifier
 
 [DIALOG_A]
 0=软件更新
@@ -225,7 +237,7 @@ Author=
 54=载入光驱(&L)
 55=属性(&P)
 56=无
-57=此程序是免费软件。\n\n如果此程序对您有用，您可以<a>捐款</a>帮助我们改进它。
+57=你正在使用免费版本，升级到<a>Pro 版本</a>可解锁更多功能。
 58=%s 已存在。\n你想替换它吗?
 59=你确定要取消吗?
 60=蓝光播放器区码
@@ -266,6 +278,17 @@ Author=
 95=此功能只存在于 <a>Pro 版本</a>。
 96=刷新(&R)
 97=编辑(&E)
-98=&Import...
-99=&Reveal keydb.db in Explorer
-100=Comment
+98=导入(&I)...
+99=定位 keydb.db(&R)
+100=注释
+101=Verify ISO
+102=Verify Folder
+103=Verify Drive
+104=Bus Encryption Capable
+105=%s (Drive: %s)
+106=Open Log Folder
+107=Options
+108=Verbose output
+109=Command line version (Windows/macOS/Linux)
+110=Abort
+111=Vendor specific
