--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -42,7 +42,7 @@ Author=The Punisher
 6=&Laufwerke im Xreveal-Taskleistensymbol anzeigen
 7=Automatisch Online auf Updates überprüfen
 8=<a>Jetzt prüfen</a>
-9=Automatisch fehlgeschlagenes Öffnen einer Disc &melden um Xreveal zu verbessern.
+9=Automatisch fehlgeschlagenes Öffnen einer Disc &melden um Xreveal zu verbessern
 
 [DIALOG_9]
 0=CD
@@ -141,7 +141,19 @@ Author=The Punisher
 4=Es wurde keine passende Entschlüsselungsdatei in der KeyDB.cfg gefunden. Möchten Sie die Entschlüsselung in unserer Cloud ausprobieren ?
 
 [DIALOG_23]
-0=Disc Informationen bearbeiten.
+0=Disc Information
+
+[DIALOG_24]
+0=Drive Information
+
+[DIALOG_25]
+0=Import...
+3=Source keydb.db:
+4=Select or drop source keydb.db here
+5=Destination keydb.db：
+
+[DIALOG_26]
+0=Content Hash Verifier
 
 [DIALOG_A]
 0=Software-Update
@@ -225,7 +237,7 @@ Author=The Punisher
 54=&Laden
 55=&Eigenschaften
 56=Keiner
-57=Dieses Programm ist Freeware.\n\nWenn es ihnen gefällt, können sie uns gerne eine <a>Spende</a> schicken.
+57=Dieses Programm ist Freeware.\n\nWenn es ihnen gefällt, können sie gerne auf die <a>Pro-Version</a> erweitern.
 58=%s ist bereits vorhanden.\nMöchten Sie diese ersetzen?
 59=Sind Sie sicher, dass Sie abbrechen möchten?
 60=Blu-ray-Player-Region
@@ -269,3 +281,14 @@ Author=The Punisher
 98=&Importieren...
 99=Keydb.db im Explorer &anzeigen 
 100=Kommentar
+101=Verify ISO
+102=Verify Folder
+103=Verify Drive
+104=Bus Encryption Capable
+105=%s (Drive: %s)
+106=Open Log Folder
+107=Options
+108=Verbose output
+109=Command line version (Windows/macOS/Linux)
+110=Abort
+111=Vendor specific
