--- a/Xreveal_ENU.ini
+++ b/Xreveal_ENU.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0409
 Name=English
-Version=2.6.6
+Version=2.6.7
 Author=
 1=OK
 2=Cancel
@@ -82,7 +82,7 @@ Author=
 
 [DIALOG_13]
 0=My Drives
-3=&Select drives that you want to scan by Xreveal.
+3=&Select drives that you want to be scanned by Xreveal.
 5=&Disable AutoRun and AutoPlay
 8=Enable &LibreDrive for UHD
 
@@ -90,8 +90,8 @@ Author=
 0=Rip to ISO file...
 1=Start
 2=Stop
-3=&Source:
-4=&Target:
+3=&Source drive:
+4=&Destination ISO file:
 5=&Keep protection (only remove bus encryption)
 6=&Verify content hash
 
@@ -141,7 +141,19 @@ Author=
 4=The disc key was not found in KeyDB.cfg. Would you like to try the "Find Key Online" Pro feature?
 
 [DIALOG_23]
-0=Edit Disc Information
+0=Disc Information
+
+[DIALOG_24]
+0=Drive Information
+
+[DIALOG_25]
+0=Import...
+3=Source keydb.db:
+4=Select or drop source keydb.db here
+5=Destination keydb.db：
+
+[DIALOG_26]
+0=Content Hash Verifier
 
 [DIALOG_A]
 0=Software Update
@@ -269,3 +281,14 @@ Author=
 98=&Import...
 99=&Reveal keydb.db in Explorer
 100=Comment
+101=Verify ISO
+102=Verify Folder
+103=Verify Drive
+104=Bus Encryption Capable
+105=%s (Drive: %s)
+106=Open Log Folder
+107=Options
+108=Verbose output
+109=Command line version (Windows/macOS/Linux)
+110=Abort
+111=Vendor specific
