--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -141,7 +141,19 @@ Author=Andex
 4=Pas de clé de déchiffrement trouvée dans 'KeyDB.cfg'!\nVoulez-vous évaluer la fonctionnalité de recherche de clé en ligne?
 
 [DIALOG_23]
-0=Modifier certaines informations
+0=Disc Information
+
+[DIALOG_24]
+0=Drive Information
+
+[DIALOG_25]
+0=Import...
+3=Source keydb.db:
+4=Select or drop source keydb.db here
+5=Destination keydb.db：
+
+[DIALOG_26]
+0=Content Hash Verifier
 
 [DIALOG_A]
 0=Mise à jour
@@ -269,3 +281,14 @@ Author=Andex
 98=&Importer...
 99=&Ouvrir l'emplacement du fichier
 100=Commentaire
+101=Verify ISO
+102=Verify Folder
+103=Verify Drive
+104=Bus Encryption Capable
+105=%s (Drive: %s)
+106=Open Log Folder
+107=Options
+108=Verbose output
+109=Command line version (Windows/macOS/Linux)
+110=Abort
+111=Vendor specific
