--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -141,7 +141,19 @@ Author=bovirus (bovirus@gmail.com)
 4=La chiave del disco non è stata trovata in KeyDB.cfg.\nVuoi provare la funzione Pro "Trova chiave online"?
 
 [DIALOG_23]
-0=Modifica info disco
+0=Disc Information
+
+[DIALOG_24]
+0=Drive Information
+
+[DIALOG_25]
+0=Import...
+3=Source keydb.db:
+4=Select or drop source keydb.db here
+5=Destination keydb.db：
+
+[DIALOG_26]
+0=Content Hash Verifier
 
 [DIALOG_A]
 0=Aggiornamento programma
@@ -269,3 +281,14 @@ Author=bovirus (bovirus@gmail.com)
 98=&Importa...
 99=&Visualizza keydb.db in Explorer
 100=Commento
+101=Verify ISO
+102=Verify Folder
+103=Verify Drive
+104=Bus Encryption Capable
+105=%s (Drive: %s)
+106=Open Log Folder
+107=Options
+108=Verbose output
+109=Command line version (Windows/macOS/Linux)
+110=Abort
+111=Vendor specific
