--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -141,7 +141,19 @@ Author=VenusGirl (비너스걸)
 4=KeyDB.cfg에서 암호 해독 키를 찾을 수 없습니다. 클라우드 암호 해독 기능을 평가하시겠습니까?
 
 [DIALOG_23]
-0=Edit Disc Information
+0=Disc Information
+
+[DIALOG_24]
+0=Drive Information
+
+[DIALOG_25]
+0=Import...
+3=Source keydb.db:
+4=Select or drop source keydb.db here
+5=Destination keydb.db：
+
+[DIALOG_26]
+0=Content Hash Verifier
 
 [DIALOG_A]
 0=소프트웨어 업데이트
@@ -269,3 +281,14 @@ Author=VenusGirl (비너스걸)
 98=가져오기(&I)...
 99=탐색기에서 keydb.db 표시(&R)
 100=주석
+101=Verify ISO
+102=Verify Folder
+103=Verify Drive
+104=Bus Encryption Capable
+105=%s (Drive: %s)
+106=Open Log Folder
+107=Options
+108=Verbose output
+109=Command line version (Windows/macOS/Linux)
+110=Abort
+111=Vendor specific
