--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -141,7 +141,19 @@ Author=jekovcar
 4=Ключи расшифровки в KeyDB.cfg не найдены. Хотите оценить функцию облачного дешифрирования?
 
 [DIALOG_23]
-0=Изменить инфо о диске
+0=Disc Information
+
+[DIALOG_24]
+0=Drive Information
+
+[DIALOG_25]
+0=Import...
+3=Source keydb.db:
+4=Select or drop source keydb.db here
+5=Destination keydb.db：
+
+[DIALOG_26]
+0=Content Hash Verifier
 
 [DIALOG_A]
 0=Обновление программы
@@ -269,3 +281,14 @@ Author=jekovcar
 98=&Импорт...
 99=&Показать keydb.db в Проводнике
 100=Комментарий
+101=Verify ISO
+102=Verify Folder
+103=Verify Drive
+104=Bus Encryption Capable
+105=%s (Drive: %s)
+106=Open Log Folder
+107=Options
+108=Verbose output
+109=Command line version (Windows/macOS/Linux)
+110=Abort
+111=Vendor specific
