--- a/Xreveal_IND.ini
+++ b/Xreveal_IND.ini
@@ -141,7 +141,19 @@ Author= Lieba Natur Brilian (naturbrilian)
 4=Tidak ada key decryption yang ditemukan di KeyDB.cfg, Anda ingin untuk mengevaluasi fitur decryption awan?
 
 [DIALOG_23]
-0=Edit Disc Information
+0=Disc Information
+
+[DIALOG_24]
+0=Drive Information
+
+[DIALOG_25]
+0=Import...
+3=Source keydb.db:
+4=Select or drop source keydb.db here
+5=Destination keydb.db：
+
+[DIALOG_26]
+0=Content Hash Verifier
 
 [DIALOG_A]
 0=Pembaruan Perangkat Lunak
@@ -269,3 +281,14 @@ Author= Lieba Natur Brilian (naturbrilian)
 98=&Import...
 99=&Reveal keydb.db in Explorer
 100=Comment
+101=Verify ISO
+102=Verify Folder
+103=Verify Drive
+104=Bus Encryption Capable
+105=%s (Drive: %s)
+106=Open Log Folder
+107=Options
+108=Verbose output
+109=Command line version (Windows/macOS/Linux)
+110=Abort
+111=Vendor specific
