--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -75,7 +75,7 @@ Author=Andex
 
 [DIALOG_12]
 0=KeyDB
-3=Note: Xreveal ne contient aucune clé de déchiffrement!\nVous devez utiliser un <a>fichier</a> pour que Xreveal puisse fonctionner.
+3=Note: Xreveal ne contient aucune clé de déchiffrement!\nVous devez utiliser <a>un fichier</a> pour que Xreveal puisse fonctionner.
 4=Emplacement du fichier 'KeyDB.cfg'
 5=Emplacement des correctifs BD+/FUT (Fix Up Table)
 6=&Rechercher la clé en ligne
