--- a/Xreveal_KOR.ini
+++ b/Xreveal_KOR.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0412
 Name=Korean (한국어)
-Version=2.6.6
+Version=2.6.7
 Author=VenusGirl (비너스걸)
 1=확인
 2=취소
@@ -99,7 +99,7 @@ Author=VenusGirl (비너스걸)
 0=하드 디스크로 추출...
 1=시작
 2=중지
-3=소스 드라이브(&S):
+3=원본 드라이브(&S):
 4=대상 디렉터리(&D):
 
 [DIALOG_16]
@@ -141,19 +141,19 @@ Author=VenusGirl (비너스걸)
 4=KeyDB.cfg에서 암호 해독 키를 찾을 수 없습니다. 클라우드 암호 해독 기능을 평가하시겠습니까?
 
 [DIALOG_23]
-0=Disc Information
+0=디스크 정보
 
 [DIALOG_24]
-0=Drive Information
+0=드라이브 정보
 
 [DIALOG_25]
-0=Import...
-3=Source keydb.db:
-4=Select or drop source keydb.db here
-5=Destination keydb.db：
+0=가져오기...
+3=원본 keydb.db:
+4=여기서 원본 keydb.db 선택 또는 놓기
+5=대상 keydb.db：
 
 [DIALOG_26]
-0=Content Hash Verifier
+0=콘텐츠 해시 확인자
 
 [DIALOG_A]
 0=소프트웨어 업데이트
@@ -281,14 +281,14 @@ Author=VenusGirl (비너스걸)
 98=가져오기(&I)...
 99=탐색기에서 keydb.db 표시(&R)
 100=주석
-101=Verify ISO
-102=Verify Folder
-103=Verify Drive
-104=Bus Encryption Capable
-105=%s (Drive: %s)
-106=Open Log Folder
-107=Options
-108=Verbose output
-109=Command line version (Windows/macOS/Linux)
-110=Abort
-111=Vendor specific
+101=ISO 검증
+102=폴더 검증
+103=드라이브 검증
+104=버스 암호화 가능
+105=%s (드라이브: %s)
+106=로그 폴더 열기
+107=옵션
+108=상세 출력
+109=명령줄 버전 (Windows/macOS/Linux)
+110=정보
+111=공급업체별
