--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0402
 Name=Bulgarian(Български)
-Version=2.6.6
+Version=2.6.7
 Author=jekovcar
 1=ОК
 2=Отказ
@@ -141,19 +141,19 @@ Author=jekovcar
 4=Няма ключове за декриптиране в KeyDB.cfg. Ще пробвате ли облачната функцията за декриптиране?
 
 [DIALOG_23]
-0=Disc Information
+0=Информация За Диска
 
 [DIALOG_24]
-0=Drive Information
+0=Информация За Устройство
 
 [DIALOG_25]
-0=Import...
-3=Source keydb.db:
-4=Select or drop source keydb.db here
-5=Destination keydb.db：
+0=Импорт...
+3=Източник keydb.db:
+4=Избор или пускане на източник keydb.db тук
+5=Местоназначение keydb.db：
 
 [DIALOG_26]
-0=Content Hash Verifier
+0=Съдържание Хеш Верификатор
 
 [DIALOG_A]
 0=Актуализация софтуер
@@ -281,14 +281,14 @@ Author=jekovcar
 98=&Импорт...
 99=&Разкрий keydb.db в Explorer
 100=Коментар:
-101=Verify ISO
-102=Verify Folder
-103=Verify Drive
-104=Bus Encryption Capable
-105=%s (Drive: %s)
-106=Open Log Folder
-107=Options
-108=Verbose output
-109=Command line version (Windows/macOS/Linux)
-110=Abort
-111=Vendor specific
+101=Проверка ISO
+102=Проверка На Папка
+103=Проверка На Устройство
+104=Bus Encryption вкл.
+105=%s (Привод: %s)
+106=Отвори папка с отчети
+107=Опции
+108=Условен изход
+109=Версия на командния ред (Windows/macOS/Linux)
+110=Отказ
+111=Спецификация доставчик
