--- a/Xreveal_RUS.ini
+++ b/Xreveal_RUS.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x0419
 Name=Russian (Русский)
-Version=2.6.6
+Version=2.6.7
 Author=jekovcar
 1=ОК
 2=Отмена
@@ -141,19 +141,19 @@ Author=jekovcar
 4=Ключи расшифровки в KeyDB.cfg не найдены. Хотите оценить функцию облачного дешифрирования?
 
 [DIALOG_23]
-0=Disc Information
+0=Информация о диске
 
 [DIALOG_24]
-0=Drive Information
+0=Информация о приводе
 
 [DIALOG_25]
-0=Import...
-3=Source keydb.db:
-4=Select or drop source keydb.db here
-5=Destination keydb.db：
+0=Импорт...
+3=Источник keydb.db:
+4=Выберите или опустите источник keydb.db здесь
+5=Место назначения keydb.db：
 
 [DIALOG_26]
-0=Content Hash Verifier
+0=Проверка хэша содержимого
 
 [DIALOG_A]
 0=Обновление программы
@@ -281,14 +281,14 @@ Author=jekovcar
 98=&Импорт...
 99=&Показать keydb.db в Проводнике
 100=Комментарий
-101=Verify ISO
-102=Verify Folder
-103=Verify Drive
-104=Bus Encryption Capable
-105=%s (Drive: %s)
-106=Open Log Folder
-107=Options
-108=Verbose output
-109=Command line version (Windows/macOS/Linux)
-110=Abort
-111=Vendor specific
+101=Проверить ISO
+102=Проверить папку
+103=Проверить диск
+104=Bus Encryption вкл.
+105=%s (Привод: %s)
+106=Открыть Log Folder
+107=Опции
+108=Подробный вывод
+109=Версия командной строки (Windows/macOS/Linux)
+110=Прервать
+111=Спецификация поставщика
