--- a/Xreveal_BUL.ini
+++ b/Xreveal_BUL.ini
@@ -288,7 +288,7 @@ Author=jekovcar
 105=%s (Привод: %s)
 106=Отвори папка с отчети
 107=Опции
-108=Условен изход
+108=Подробно извеждане
 109=Версия на командния ред (Windows/macOS/Linux)
 110=Отказ
 111=Спецификация доставчик
