Update DEU translation

--- a/Xreveal_DEU.ini
+++ b/Xreveal_DEU.ini
@@ -1,7 +1,7 @@
 ﻿[INFO]
 ID=0x0407
 Name=German (Deutsch)
-Version=2.6.1
+Version=2.6.8
 Author=The Punisher
 1=OK
 2=Abbrechen
@@ -69,7 +69,7 @@ Author=The Punisher
 9=Copy-Control-Informationen entfernen
 10=BD-Live deaktivieren
 11=Angeschlossenes 3D-Display simulieren
-12=Ordner umbenennen
+12=Ordner auf der Disc umbenennen
 13=&AES Hardwarebeschleunigung nutzen
 14=<a>Benchmark</a>
 
@@ -118,7 +118,7 @@ Author=The Punisher
 
 [DIALOG_19]
 0=Hotkeys
-3=Erstellen Sie Hotkeys um Funktionen schnell zu erreichen.
+3=Erstellen Sie Tastatur-Hotkeys um Funktionen schnell zu erreichen.
 4=Xreveal Menü:
 5=Einstellungen:
 6=Xreveal aktivieren:
@@ -141,19 +141,19 @@ Author=The Punisher
 4=Es wurde keine passende Entschlüsselungsdatei in der KeyDB.cfg gefunden. Möchten Sie die Entschlüsselung in unserer Cloud ausprobieren ?
 
 [DIALOG_23]
-0=Disc Information
+0=Disc-Informationen
 
 [DIALOG_24]
-0=Drive Information
+0=Laufwerk-Informationen
 
 [DIALOG_25]
-0=Import...
-3=Source keydb.db:
-4=Select or drop source keydb.db here
-5=Destination keydb.db：
+0=Importieren...
+3=Quell-Keydb.db:
+4=Wählen sie die Quell-Keydb.db aus oder kopieren sie Eine hierhin.
+5=Ziel-Keydb.db：
 
 [DIALOG_26]
-0=Content Hash Verifier
+0=Content Hash Kontrolle
 
 [DIALOG_A]
 0=Software-Update
@@ -186,7 +186,7 @@ Author=The Punisher
 3=4 - Australien, Mittel- und Südamerika
 4=5 - Russland, Ost-Europa und Afrika
 5=6 - China
-6=7 - Reserved
+6=7 - Reserviert
 7=8 - Besondere internationale Venues (Flugzeuge, Kreuzfahrtschiffe etc.)
 8=A - Nord-Amerika, Mittel-Amerika, Süd-Amerika, Korea, Japan, Süd-Ost Asien
 9=B - Europa, Naher Osten, Afrika, Australien, Neuseeland
@@ -281,14 +281,14 @@ Author=The Punisher
 98=&Importieren...
 99=Keydb.db im Explorer &anzeigen 
 100=Kommentar
-101=Verify ISO
-102=Verify Folder
-103=Verify Drive
-104=Bus Encryption Capable
-105=%s (Drive: %s)
-106=Open Log Folder
-107=Options
-108=Verbose output
-109=Command line version (Windows/macOS/Linux)
-110=Abort
-111=Vendor specific
+101=ISO überprüfen
+102=Ordner überprüfen
+103=Laufwerk überprüfen
+104=Unterstützt Bus Encryption
+105=%s (Laufwerk: %s)
+106=Öffne Log Ordner
+107=Einstellungen
+108=Verboseausgabe
+109=Eingabeaufforderungsversion (Windows/macOS/Linux)
+110=Abbrechen
+111=Herstellerspezifisch
